Updated relative links

--- a/new-html-mocks.html
+++ b/new-html-mocks.html
@@ -121,7 +121,7 @@
                                 <label class="d-block s-label" for="siteSpecificCloseReasonId-11-">
 
                                     <span class="js-action-name">Not reproducible or was caused by a typo</span>
-                                    <p class="s-description">While similar questions may be <a href="/help/on-topic"
+                                    <p class="s-description">While similar questions may be <a href="https://stackoverflow.com/help/on-topic"
                                                                                                target="_blank">on-topic</a>
                                         here, this one was resolved in a way less likely to help future readers.</p>
                                 </label>
@@ -227,7 +227,7 @@ You have X votes left today                            </span>
             <div class="flex--item lh-md">
                 <p class="mb0">
                     This question does not appear to be about a specific programming problem, software algorithm, or
-                    tools commonly used by programmers. You can edit the question so it’s <a href="/help/on-topic">on-topic</a>
+                    tools commonly used by programmers. You can edit the question so it’s <a href="https://stackoverflow.com/help/on-topic">on-topic</a>
                     or see if it can be answered on <a href="https://stackexchange.com/sites" target="_blank">another
                     site on the Stack Exchange Network</a>.
                 </p>
@@ -236,7 +236,7 @@ You have X votes left today                            </span>
             </div>
         </div>
         <div class="mt24 d-flex gsx gs8">
-            <a class="s-btn s-btn__outlined flex--item js-post-notice-edit-post" href="/posts/72219705/edit">
+            <a class="s-btn s-btn__outlined flex--item js-post-notice-edit-post" href="/edit">
                 Edit question
             </a>
         </div>
@@ -270,7 +270,7 @@ You have X votes left today                            </span>
                     This question does not appear to be about a specific programming problem, software development, or
                     tools
                     commonly used by programmers. You can edit the
-                    question so it’s <a href="/help/on-topic">on-topic</a> for Stack Overflow.
+                    question so it’s <a href="https://stackoverflow.com/help/on-topic">on-topic</a> for Stack Overflow.
                 </p>
                 <p class="mb0 mt6">Closed <span title="2022-05-12 17:33:51Z" class="relativetime">[Time] ago</span> by
                     <a href="/null">Anon-User 1</a>,
@@ -283,7 +283,7 @@ You have X votes left today                            </span>
             </div>
         </div>
         <div class="mt24 d-flex gsx gs8">
-            <a class="s-btn s-btn__outlined flex--item js-post-notice-edit-post" href="/posts/72219705/edit">
+            <a class="s-btn s-btn__outlined flex--item js-post-notice-edit-post" href="/edit">
                 Edit question
             </a>
         </div>
@@ -315,7 +315,7 @@ You have X votes left today                            </span>
             <div class="flex--item lh-md">
                 <p class="mb0">
                     <b>Want to improve this question?</b> Update the question so it's <a
-                        href="/help/on-topic">on-topic</a>
+                        href="https://stackoverflow.com/help/on-topic">on-topic</a>
                     for Stack Overflow.
                 </p>
                 <p class="mb0 mt6">Closed <span title="2022-05-12 17:33:51Z" class="relativetime">[Time] ago</span>.
@@ -324,7 +324,7 @@ You have X votes left today                            </span>
             </div>
         </div>
         <div class="mt24 d-flex gsx gs8">
-            <a class="s-btn s-btn__outlined flex--item js-post-notice-edit-post" href="/posts/72219705/edit">
+            <a class="s-btn s-btn__outlined flex--item js-post-notice-edit-post" href="/null">
                 Improve this question
             </a>
         </div>
