Updated relative links

--- a/new-html-mocks.html
+++ b/new-html-mocks.html
@@ -324,7 +324,7 @@ You have X votes left today                            </span>
             </div>
         </div>
         <div class="mt24 d-flex gsx gs8">
-            <a class="s-btn s-btn__outlined flex--item js-post-notice-edit-post" href="/null">
+            <a class="s-btn s-btn__outlined flex--item js-post-notice-edit-post" href="/edit">
                 Improve this question
             </a>
         </div>
