Added link to help/closed-questions on banners

--- a/new-html-mocks.html
+++ b/new-html-mocks.html
@@ -121,8 +121,9 @@
                                 <label class="d-block s-label" for="siteSpecificCloseReasonId-11-">
 
                                     <span class="js-action-name">Not reproducible or was caused by a typo</span>
-                                    <p class="s-description">While similar questions may be <a href="https://stackoverflow.com/help/on-topic"
-                                                                                               target="_blank">on-topic</a>
+                                    <p class="s-description">While similar questions may be <a
+                                            href="https://stackoverflow.com/help/on-topic"
+                                            target="_blank">on-topic</a>
                                         here, this one was resolved in a way less likely to help future readers.</p>
                                 </label>
                             </div>
@@ -211,8 +212,12 @@ You have X votes left today                            </span>
             <div class="d-flex fw-nowrap">
                 <div class="flex--item wmn0 fl1 lh-lg">
                     <div class="flex--item fl1 lh-lg">
-                        <b>Closed.</b> This question is not <a>about programming or software development</a>. It is not currently accepting answers.
-
+                        <b>Closed.</b>
+                        This question is not
+                        <a href="https://stackoverflow.com/help/closed-questions">
+                            about programming or software development
+                        </a>.
+                        It is not currently accepting answers.
                     </div>
                 </div>
             </div>
@@ -227,7 +232,8 @@ You have X votes left today                            </span>
             <div class="flex--item lh-md">
                 <p class="mb0">
                     This question does not appear to be about a specific programming problem, software algorithm, or
-                    tools commonly used by programmers. You can edit the question so it’s <a href="https://stackoverflow.com/help/on-topic">on-topic</a>
+                    tools commonly used by programmers. You can edit the question so it’s <a
+                        href="https://stackoverflow.com/help/on-topic">on-topic</a>
                     or see if it can be answered on <a href="https://stackexchange.com/sites" target="_blank">another
                     site on the Stack Exchange Network</a>.
                 </p>
@@ -252,7 +258,12 @@ You have X votes left today                            </span>
                 <div class="flex--item wmn0 fl1 lh-lg">
                     <div class="flex--item fl1 lh-lg">
 
-                        <b>Closed.</b> This question is not <a>about programming or software development</a>. It is not currently accepting answers.
+                        <b>Closed.</b>
+                        This question is not
+                        <a href="https://stackoverflow.com/help/closed-questions">
+                            about programming or software development
+                        </a>.
+                        It is not currently accepting answers.
 
                     </div>
                 </div>
@@ -299,8 +310,12 @@ You have X votes left today                            </span>
             <div class="d-flex fw-nowrap">
                 <div class="flex--item wmn0 fl1 lh-lg">
                     <div class="flex--item fl1 lh-lg">
-
-                        <b>Closed.</b> This question is not <a>about programming or software development</a>. It is not currently accepting answers.
+                        <b>Closed.</b>
+                        This question is not
+                        <a href="https://stackoverflow.com/help/closed-questions">
+                            about programming or software development
+                        </a>.
+                        It is not currently accepting answers.
                     </div>
                 </div>
             </div>
