Include Generation Code

--- a/builders/output/new-html-mocks.html
+++ b/builders/output/new-html-mocks.html
@@ -63,13 +63,13 @@
                                         Not about programming or software development
                                     </span>
                                     <p class="s-description">
-                                        This question does not appear to be about a specific programming problem,
-                                        software algorithm, or tools commonly used by programmers.
-                                        It may belong on
-                                        <a href="https://stackexchange.com/sites" target="_blank">
-                                            a different Stack Exchange site
-                                        </a>
-                                        or other external site.
+                                        This question does not appear to be
+                                        about a specific programming problem,
+                                        software algorithm, or tools commonly
+                                        used by programmers. It may belong on <a
+                                            href="https://stackexchange.com/sites">a
+                                        different Stack Exchange site</a> or
+                                        other external site.
                                     </p>
                                 </label>
                             </div>
@@ -212,12 +212,10 @@ You have X votes left today                            </span>
             <div class="d-flex fw-nowrap">
                 <div class="flex--item wmn0 fl1 lh-lg">
                     <div class="flex--item fl1 lh-lg">
-                        <b>Closed.</b>
-                        This question is not
-                        <a href="https://stackoverflow.com/help/closed-questions">
-                            about programming or software development
-                        </a>.
-                        It is not currently accepting answers.
+                        <strong>Closed.</strong> This question is not <a
+                            href="https://stackoverflow.com/help/closed-questions">about
+                        programming or software development</a>. It is not
+                        currently accepting answers.
                     </div>
                 </div>
             </div>
@@ -231,11 +229,13 @@ You have X votes left today                            </span>
             </div>
             <div class="flex--item lh-md">
                 <p class="mb0">
-                    This question does not appear to be about a specific programming problem, software algorithm, or
-                    tools commonly used by programmers. You can edit the question so it’s <a
+                    This question does not appear to be about a specific
+                    programming problem, software algorithm, or tools commonly
+                    used by programmers. You can edit the question so it’s <a
                         href="https://stackoverflow.com/help/on-topic">on-topic</a>
-                    or see if it can be answered on <a href="https://stackexchange.com/sites" target="_blank">another
-                    site on the Stack Exchange Network</a>.
+                    or see if it can be answered on <a
+                        href="https://stackexchange.com/sites">another site on
+                    the Stack Exchange Network</a>.
                 </p>
                 <p class="mb0 mt6">Closed <span title="2022-05-12 17:33:51Z" class="relativetime">[Time] ago</span>.</p>
                 <p class="mb0 mt6 fs-fine fc-black-500">(Private feedback for you)</p>
@@ -257,14 +257,10 @@ You have X votes left today                            </span>
             <div class="d-flex fw-nowrap">
                 <div class="flex--item wmn0 fl1 lh-lg">
                     <div class="flex--item fl1 lh-lg">
-
-                        <b>Closed.</b>
-                        This question is not
-                        <a href="https://stackoverflow.com/help/closed-questions">
-                            about programming or software development
-                        </a>.
-                        It is not currently accepting answers.
-
+                        <strong>Closed.</strong> This question is not <a
+                            href="https://stackoverflow.com/help/closed-questions">about
+                        programming or software development</a>. It is not
+                        currently accepting answers.
                     </div>
                 </div>
             </div>
@@ -278,10 +274,11 @@ You have X votes left today                            </span>
             </div>
             <div class="flex--item lh-md">
                 <p class="mb0">
-                    This question does not appear to be about a specific programming problem, software development, or
-                    tools
-                    commonly used by programmers. You can edit the
-                    question so it’s <a href="https://stackoverflow.com/help/on-topic">on-topic</a> for Stack Overflow.
+                    This question does not appear to be about a specific
+                    programming problem, software development, or tools commonly
+                    used by programmers. You can edit the question so it’s <a
+                        href="https://stackoverflow.com/help/on-topic">on-topic</a>
+                    for Stack Overflow.
                 </p>
                 <p class="mb0 mt6">Closed <span title="2022-05-12 17:33:51Z" class="relativetime">[Time] ago</span> by
                     <a href="/null">Anon-User 1</a>,
@@ -310,12 +307,10 @@ You have X votes left today                            </span>
             <div class="d-flex fw-nowrap">
                 <div class="flex--item wmn0 fl1 lh-lg">
                     <div class="flex--item fl1 lh-lg">
-                        <b>Closed.</b>
-                        This question is not
-                        <a href="https://stackoverflow.com/help/closed-questions">
-                            about programming or software development
-                        </a>.
-                        It is not currently accepting answers.
+                        <strong>Closed.</strong> This question is not <a
+                            href="https://stackoverflow.com/help/closed-questions">about
+                        programming or software development</a>. It is not
+                        currently accepting answers.
                     </div>
                 </div>
             </div>
