Close Dialogue / Privileged Users Guidance Tweaks

--- a/builders/html-output/mock-close-dialogue-rendered.html
+++ b/builders/html-output/mock-close-dialogue-rendered.html
@@ -67,7 +67,7 @@
                                         Not about programming or software development
                                     </span>
                                     <p class="s-description">
-                                        This question does not appear to be about a specific programming problem, software algorithm, or tools commonly used by programmers. It may belong on <a href="https://stackexchange.com/sites">a different Stack Exchange site</a> or other external site.
+                                        This question does not appear to be about <a href="https://stackoverflow.com/help/on-topic">a specific programming problem, software algorithm, or tools commonly used by programmers</a>. It may belong on <a href="https://stackexchange.com/sites">a different Stack Exchange site</a> or other external site.
                                     </p>
                                 </label>
                             </div>
