--- a/builders/html-output/mock-privileged-banner-rendered.html
+++ b/builders/html-output/mock-privileged-banner-rendered.html
@@ -46,7 +46,7 @@
             </div>
             <div class="flex--item lh-md">
                 <p class="mb0">
-                    This question does not appear to be about a specific programming problem, software development, or tools commonly used by programmers. If you believe the question would be on-topic  on <a href="https://stackexchange.com/sites">another site in the Stack Exchange Network</a> you can leave a comment to explain where the question may be able to get answers.
+                    If you believe the question is about <a href="https://stackoverflow.com/help/on-topic">a specific programming problem, software algorithm, or tools commonly used by programmers</a> help by editing the question to improve it or leave a comment explaining to the post author how to improve their question. If the question would be on-topic  on <a href="https://stackexchange.com/sites">another site in the Stack Exchange Network</a> you can leave a comment to explain where the question may be able to get answers.
                 </p>
                 <p class="mb0 mt6">Closed <span title="2022-05-12 17:33:51Z"
                                                 class="relativetime">[Time] ago</span>
