--- a/builders/html-output/mock-privileged-banner-rendered.html
+++ b/builders/html-output/mock-privileged-banner-rendered.html
@@ -46,7 +46,7 @@
             </div>
             <div class="flex--item lh-md">
                 <p class="mb0">
-                    This question does not appear to be about a specific programming problem, software algorithm, or tools commonly used by programmers. If you believe the question is on-topic on <a href="https://stackexchange.com/sites">another site on the Stack Exchange Network</a> you can leave a comment to explain where the question may be able to get answers.
+                    This question does not appear to be about a specific programming problem, software algorithm, or tools commonly used by programmers. If you believe the question is on-topic on <a href="https://stackexchange.com/sites">another site on the Stack Exchange Network</a> you can leave a comment to explain where the question may be able to be answered.
                 </p>
                 <p class="mb0 mt6">Closed <span title="2022-05-12 17:33:51Z"
                                                 class="relativetime">[Time] ago</span>
