Consistency among reasons; re-worded some answer text

--- a/builders/html-output/mock-close-dialogue-rendered.html
+++ b/builders/html-output/mock-close-dialogue-rendered.html
@@ -67,7 +67,7 @@
                                         Not about programming or software development
                                     </span>
                                     <p class="s-description">
-                                        This question does not appear to be about <a href="https://stackoverflow.com/help/on-topic">a specific programming problem, software algorithm, or tools commonly used by programmers</a>. It may be on-topic on <a href="https://stackexchange.com/sites">another site on the Stack Exchange Network</a> but cannot be answered on Stack Overflow.
+                                        This question does not appear to be about <a href="https://stackoverflow.com/help/on-topic">a specific programming problem, software algorithm, or tools commonly used by programmers</a>. It <em>may</em> be able to be answered on <a href="https://stackexchange.com/sites">another Stack Exchange site</a> but is not on-topic for Stack Overflow.
                                     </p>
                                 </label>
                             </div>
