--- a/builders/html-output/mock-private-banner-rendered.html
+++ b/builders/html-output/mock-private-banner-rendered.html
@@ -46,7 +46,7 @@
             </div>
             <div class="flex--item lh-md">
                 <p class="mb0">
-                    This question does not appear to be about <a href="https://stackoverflow.com/help/on-topic">a specific programming problem, software algorithm, or tools commonly used by programmers</a>. You can edit the question so it’s <a href="https://stackoverflow.com/help/on-topic">on-topic</a> or see if it can be answered on <a href="https://stackexchange.com/sites">another Stack Exchange site</a>, but be sure to read the on-topic page for the site you select prior to posting.
+                    This question does not appear to be about <a href="https://stackoverflow.com/help/on-topic">a specific programming problem, software algorithm, or tools commonly used by programmers</a>. You can edit the question so it’s <a href="https://stackoverflow.com/help/on-topic">on-topic</a> or see if it can be answered on <a href="https://stackexchange.com/sites">another Stack Exchange site</a>, but be sure to read the on-topic page for the site you choose before posting.
                 </p>
                 <p class="mb0 mt6">Closed <span title="2022-05-12 17:33:51Z"
                                                 class="relativetime">[Time] ago</span>.
