Description and banner updated to reflect the fourth bullet of help/on-topic

--- a/builders/html-output/mock-close-dialogue-rendered.html
+++ b/builders/html-output/mock-close-dialogue-rendered.html
@@ -64,10 +64,10 @@
                                        for="siteSpecificCloseReasonId-4-">
 
                                     <span class="js-action-name">
-                                        Not about programming or software development
+                                        Not a practical, answerable problem unique to software development
                                     </span>
                                     <p class="s-description">
-                                        This question does not appear to be about <a href="https://stackoverflow.com/help/on-topic">a specific programming problem, software algorithm, or tools commonly used by programmers</a>. It <em>may</em> be able to be answered on <a href="https://stackexchange.com/sites">another Stack Exchange site</a> but is not on-topic for Stack Overflow.
+                                        This question does not appear to be about <a href="https://stackoverflow.com/help/on-topic">a specific programming problem, a software algorithm, or software tools commonly used by programmers</a>.
                                     </p>
                                 </label>
                             </div>
