--- a/builders/html-output/mock-public-banner-rendered.html
+++ b/builders/html-output/mock-public-banner-rendered.html
@@ -31,7 +31,7 @@
             <div class="d-flex fw-nowrap">
                 <div class="flex--item wmn0 fl1 lh-lg">
                     <div class="flex--item fl1 lh-lg">
-                        <strong>Closed.</strong> This question is <a href="https://stackoverflow.com/help/closed-questions">not about programming or software development</a>. It is not currently accepting answers.
+                        <strong>Closed.</strong> This question is <a href="https://stackoverflow.com/help/closed-questions">not a practical, answerable problem unique to software development</a>. It is not currently accepting answers.
                     </div>
                 </div>
             </div>
