Adopted "primarily" instead of "commonly"; reverted description

--- a/builders/html-output/mock-close-dialogue-rendered.html
+++ b/builders/html-output/mock-close-dialogue-rendered.html
@@ -64,10 +64,10 @@
                                        for="siteSpecificCloseReasonId-4-">
 
                                     <span class="js-action-name">
-                                        Not a practical, answerable problem unique to software development
+                                        Not about programming or software development
                                     </span>
                                     <p class="s-description">
-                                        This question does not appear to be about <a href="https://stackoverflow.com/help/on-topic">a specific programming problem, a software algorithm, or software tools commonly used by programmers</a>.
+                                        This question does not appear to be about <a href="https://stackoverflow.com/help/on-topic">a specific programming problem, a software algorithm, or software tools primarily used by programmers</a>.
                                     </p>
                                 </label>
                             </div>
