--- a/builders/html-output/mock-public-banner-rendered.html
+++ b/builders/html-output/mock-public-banner-rendered.html
@@ -32,29 +32,31 @@
                 <div class="flex--item wmn0 fl1 lh-lg">
                     <div class="flex--item fl1 lh-lg">
                         <strong>Closed.</strong> This question is <a href="https://stackoverflow.com/help/closed-questions">not about programming or software development</a>. It is not currently accepting answers.
+
                     </div>
                 </div>
             </div>
         </div>
         <hr class="my12 outline-none baw0 bb bc-powder-400">
-        <div class="d-flex fw-nowrap fc-black-600">
-            <div class="flex--item mr8">
-                <svg aria-hidden="true" class="svg-icon iconLightbulb"
-                     width="18" height="18" viewBox="0 0 18 18">
-                    <path d="M15 6.38A6.48 6.48 0 0 0 7.78.04h-.02A6.49 6.49 0 0 0 2.05 5.6a6.31 6.31 0 0 0 2.39 5.75c.49.39.76.93.76 1.5v.24c0 1.07.89 1.9 1.92 1.9h2.75c1.04 0 1.92-.83 1.92-1.9v-.2c0-.6.26-1.15.7-1.48A6.32 6.32 0 0 0 15 6.37ZM4.03 5.85A4.49 4.49 0 0 1 8 2.02a4.48 4.48 0 0 1 5 4.36 4.3 4.3 0 0 1-1.72 3.44c-.98.74-1.5 1.9-1.5 3.08v.1H7.2v-.14c0-1.23-.6-2.34-1.53-3.07a4.32 4.32 0 0 1-1.64-3.94ZM10 18a1 1 0 0 0 0-2H7a1 1 0 1 0 0 2h3Z"></path>
-                </svg>
-            </div>
-            <div class="flex--item lh-md">
-                <p class="mb0">
-                    <b>Want to improve this question?</b> Update the question so
-                    it's <a
-                        href="https://stackoverflow.com/help/on-topic">on-topic</a>
-                    for Stack Overflow.
-                </p>
-                <p class="mb0 mt6">Closed <span title="2022-05-12 17:33:51Z"
-                                                class="relativetime">[Time] ago</span>.
-                </p>
+        <div class="fw-nowrap fc-black-600">
+            <div class="d-flex fd-column lh-md">
+                <div class="mb0 d-flex">
+                    <div class="flex--item mr8">
+                        <svg aria-hidden="true" class="svg-icon iconLightbulb"
+                             width="18" height="18" viewBox="0 0 18 18">
+                            <path d="M15 6.38A6.48 6.48 0 0 0 7.78.04h-.02A6.49 6.49 0 0 0 2.05 5.6a6.31 6.31 0 0 0 2.39 5.75c.49.39.76.93.76 1.5v.24c0 1.07.89 1.9 1.92 1.9h2.75c1.04 0 1.92-.83 1.92-1.9v-.2c0-.6.26-1.15.7-1.48A6.32 6.32 0 0 0 15 6.37ZM4.03 5.85A4.49 4.49 0 0 1 8 2.02a4.48 4.48 0 0 1 5 4.36 4.3 4.3 0 0 1-1.72 3.44c-.98.74-1.5 1.9-1.5 3.08v.1H7.2v-.14c0-1.23-.6-2.34-1.53-3.07a4.32 4.32 0 0 1-1.64-3.94ZM10 18a1 1 0 0 0 0-2H7a1 1 0 1 0 0 2h3Z"></path>
+                        </svg>
+                    </div>
+                    <p>This question does not appear to be about <a href="https://stackoverflow.com/help/on-topic">a specific programming problem, a software algorithm, or software tools primarily used by programmers</a>. If you believe the question is on-topic on <a href="https://stackexchange.com/sites">another Stack Exchange site</a> you can leave a comment to explain where the question may be able to be answered.</p>
+                </div>
+                <div class="mb0 mt6 d-flex">
+                    <p class="ml24 pl2">Closed <span title=""
+                                                     class="relativetime">[Time] ago</span>.
+                    </p>
+                </div>
+                <div class="ml24 pl2">
 
+                </div>
             </div>
         </div>
         <div class="mt24 d-flex gsx gs8">
@@ -64,7 +66,6 @@
             </a>
         </div>
     </aside>
-
 </div>
 </body>
 </html>
