Updated usage guidance to be "usage guidance"

--- a/builders/html-output/mock-close-dialogue-rendered.html
+++ b/builders/html-output/mock-close-dialogue-rendered.html
@@ -67,7 +67,7 @@
                                         Not about programming or software development
                                     </span>
                                     <p class="s-description">
-                                        This question does not appear to be about <a href="https://stackoverflow.com/help/on-topic">a specific programming problem, a software algorithm, or software tools primarily used by programmers</a>.
+                                        This question does not appear to be about <a href="https://stackoverflow.com/help/on-topic">a specific programming problem, a software algorithm, or software tools primarily used by programmers</a>. Do not use this close reason for questions that are on-topic for Stack Overflow, even if it would be on-topic on <a href="https://stackexchange.com/sites">another Stack Exchange site</a> as well. Questions <em>about</em> Stack Overflow itself should be migrated to <a href="https://stackoverflow.com/help/privileges/participate-in-meta">Meta Stack Overflow</a> instead.
                                     </p>
                                 </label>
                             </div>
